--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/icons": "^2.1.0",
     "@chakra-ui/react": "^2.8.0",
     "@clerk/clerk-react": "^4.24.2",
+    "@clerk/themes": "^1.7.5",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "convex": "^1.2.1",
