--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "^11.11.0",
     "convex": "^1.2.1",
     "framer-motion": "^10.16.4",
+    "langchain": "^0.0.145",
     "openai": "^4.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
