--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@clerk/themes": "^1.7.5",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@types/node-fetch": "^2.6.4",
     "convex": "^1.2.1",
     "framer-motion": "^10.16.4",
     "langchain": "^0.0.145",
+    "node-fetch": "^3.3.2",
     "openai": "^4.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
