--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@clerk/themes": "^1.7.5",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.1",
     "@types/node-fetch": "^2.6.4",
     "convex": "^1.2.1",
     "framer-motion": "^10.16.4",
@@ -24,7 +25,9 @@
     "openai": "^4.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0"
+    "react-hook-form": "^7.46.1",
+    "react-router-dom": "^6.15.0",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
